# fastapi-kubernetes-containser

./: .gitignore  Dockerfile  README.md  compose.prd.yml  compose.yml
.github/workflows/: build.yaml  test.yaml
app/: main.py  pyproject.toml
app/modules/: redis_module.py
app/routers/: operation_check.py  youtube_download_router.py
app/settings/: config.py
